attempt to fix: OpenInPython does not work under Windows (no window opens after execution)